--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "helmet": "^5.0.2",
+    "mongoose": "^6.2.3",
     "morgan": "^1.10.0"
   }
 }
