--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
     "cross-env": "^7.0.3",
     "express": "^4.17.3",
     "helmet": "^5.0.2",
+    "joi": "^17.6.0",
     "mongoose": "^6.2.3",
     "morgan": "^1.10.0"
   }
