--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -5,7 +5,10 @@
     "target": "es6",
     "moduleResolution": "node",
     "sourceMap": true,
-    "outDir": "dist"
+    "outDir": "dist",
+    "baseUrl": "src"
   },
-  "lib": ["es2015"]
+  "lib": ["es2015"],
+  "include": ["src/**/*.ts", "src/**/*.json", ".env"],
+  "exclude": ["node_modules"]
 }
