--- a/server/package.json
+++ b/server/package.json
@@ -25,8 +25,7 @@
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
     "ts-node": "^10.5.0",
-    "tsconfig-paths": "^3.12.0",
-    "typescript": "^4.5.5"
+    "tsconfig-paths": "^3.12.0"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -37,6 +36,8 @@
     "mongoose": "^6.2.3",
     "morgan": "^1.10.0",
     "swagger-jsdoc": "^6.0.0",
-    "swagger-ui-express": "^4.1.6"
+    "swagger-ui-express": "^4.1.6",
+    "tsc": "^2.0.4",
+    "typescript": "^4.5.5"
   }
 }
