--- a/server/package.json
+++ b/server/package.json
@@ -4,11 +4,10 @@
   "description": "Provides an Api for the todos app",
   "main": "app.js",
   "scripts": {
-    "start": "npm run build && cross-env NODE_ENV=production node dist/app.js",
+    "start": "node dist/app.js",
     "dev": "cross-env NODE_ENV=development nodemon",
-    "build": "tsc",
     "lint": "eslint . --ext .ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "postinstall": "tsc"
   },
   "author": "Ravisankar Chinnam",
   "license": "ISC",
