--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/node": "^17.0.21",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
@@ -22,6 +23,7 @@
     "eslint-config-prettier": "^8.4.0",
     "eslint-plugin-prettier": "^4.0.0",
     "nodemon": "^2.0.15",
+    "openapi-types": "^10.0.0",
     "prettier": "^2.5.1",
     "ts-node": "^10.5.0",
     "tsconfig-paths": "^3.12.0"
