--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
+    "react-router-dom": "5.2.0",
     "react-scripts": "5.0.0",
     "redux-saga": "^1.1.3",
     "typescript": "^4.1.6"
@@ -45,6 +46,8 @@
     ]
   },
   "devDependencies": {
-    "prettier": "^2.5.1"
+    "@types/react-router-dom": "^5.3.3",
+    "prettier": "^2.5.1",
+    "sass": "^1.49.9"
   }
 }
